Fixed `Pen` lints.